--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     width: 100%;
     height: 100%;
     font-family: 'Poppins', sans-serif;
+    background-color: var(--wh);
 }
 
 ul {
@@ -30,3 +31,81 @@ a {
 
 /* HEADER */
 
+.header {
+    display: flex;
+}
+
+.header > .title {
+    font-size: 1.5em;
+    color: var(--bk);
+}
+
+.header > .title > h1 {
+    display: block;
+    position: relative;
+    padding: 5px 10px;
+}
+
+.header > .title > h1::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--bl);
+    z-index: 1;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: all .5s ease-in-out;
+    animation: BorderAnimation infinite linear 4s;
+}
+
+@keyframes BorderAnimation {
+    0% {
+        transform: scaleX(0);
+        transform-origin: left;
+        transition-timing-function: cubic-bezier(0.2, 1, 0.82, 0.94);
+    }
+
+    25% {
+        transform: scaleX(.6);
+        transform-origin: left;
+        transition-timing-function: cubic-bezier(0.2, 1, 0.82, 0.94);
+    }
+
+    75% {
+        transform: scaleX(.6);
+        transform-origin: right;
+        transition-timing-function: cubic-bezier(0.2, 1, 0.82, 0.94);
+    }
+
+    100% {
+        transform: scaleX(0);
+        transform-origin: right;
+        transition-timing-function: cubic-bezier(0.2, 1, 0.82, 0.94);
+    }
+}
+
+.header > nav {
+    margin-top: 10px;
+}
+
+.header > nav > .nav-menu {
+    display: flex;
+}
+
+.nav-menu > li {
+    margin: 0 15px;
+}
+
+.nav-menu > li > a {
+    font-size: 1.25em;
+    color: var(--gr);
+    transition: all .5s ease-in-out;
+}
+
+.nav-menu > li > a:hover {
+    font-size: 1.5em;
+    text-shadow: 0 0 20px var(--bl);
+}
